Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13565

QSymbianTextCodec::init() on Symbian^4 (and ^3?) is too slow

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.1
    • Some future release
    • None
    • None
    • Symbian
    • ef6f2bf9098eff849290494f2da55c3b9ab0b95f

    Description

      Measurements that were mailed to me from somebody at Nokia showed that QSymbianTextCodec::init() takes up to 300ms on newer Symbian versions. I believe it is Symbian^4, but it could also be Symbian^3.
      The apparent reason is that the static codec alias lookup table in qtextcodec_symbian.cpp has much less entries than the newer Symbian versions have codecs. Therefore, QSymbianTextCodec::init() will call the expensive ConvertCharacterSetIdentifierToStandardNameL (via IPC?) for each system codec taht is not in the aforementioned list.

      Todo as fix: Verify if entries have to be added to that list, and then do it.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              portale Alessandro Portale
              portale Alessandro Portale
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes