Remove unnecessary textcodec aliases from qtextcodec_symbian.cpp

MS_KANJI and Java UTF-8 are not needed because both had aliases
which only differ in character case. Qt handles these aliases
case insensitive, however.

The removal speeds the lookup up, a bit.

Reviewed-By: Olivier Goffart
Task-Number: QTBUG-13565